# port-scanner

./: .gitignore  .gitignore   LICENSE  README.md  pyproject.toml
src/port_scanner/: __init__.py  cli.py
tests/: test_ports.py
