[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "port-scanner"
version = "1.3"
description = "Threaded multi-language TCP port scanner"
requires-python = ">=3.10"
authors = [{ name = "Onur Keskin" }]
readme = "README.md"

[project.scripts]
port-scanner = "port_scanner.cli:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
